--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,11 +1,8 @@
 {
-	"json.schemas": [
-		{
-			"url": "https://cdn.jsdelivr.net/npm/tsup/schema.json",
-			"fileMatch": [
-				"package.json",
-				"tsup.config.ts"
-			]
-		}
-	]
+  "json.schemas": [
+    {
+      "url": "https://cdn.jsdelivr.net/npm/tsup/schema.json",
+      "fileMatch": ["package.json", "tsup.config.ts"]
+    }
+  ]
 }
