--- a/biome.json
+++ b/biome.json
@@ -1,11 +1,20 @@
 {
-  "$schema": "https://biomejs.dev/schemas/1.5.3/schema.json",
+  "$schema": "https://biomejs.dev/schemas/1.9.4/schema.json",
   "organizeImports": {
     "enabled": true
   },
   "linter": {
     "enabled": true,
     "rules": {
+      "performance": {
+        "all": true
+      },
+      "security": {
+        "all": true
+      },
+      "style": {
+        "all": true
+      },
       "recommended": true,
       "correctness": {
         "noUnusedVariables": "error"
@@ -21,10 +30,13 @@
     "indentWidth": 2,
     "lineWidth": 80
   },
+  "assists": {
+    "enabled": true
+  },
   "javascript": {
     "formatter": {
       "quoteStyle": "double",
       "trailingComma": "es5"
     }
   }
-} 
+}
