refactor: improve error handling and type safety in SDK
This commit improves error handling with specific error classes, adds better type safety for capture options, removes console logs, and cleans up tests.

--- a/biome.json
+++ b/biome.json
@@ -3,6 +3,14 @@
   "organizeImports": {
     "enabled": true
   },
+  "files": {
+    "ignore": ["tests/vitest.config.ts", "tsup.config.ts"]
+  },
+  "vcs": {
+    "enabled": true,
+    "useIgnoreFile": true,
+    "clientKind": "git"
+  },
   "linter": {
     "enabled": true,
     "rules": {
@@ -13,7 +21,8 @@
         "all": true
       },
       "style": {
-        "all": true
+        "all": true,
+        "useNamingConvention": "off"
       },
       "recommended": true,
       "correctness": {
@@ -36,7 +45,7 @@
   "javascript": {
     "formatter": {
       "quoteStyle": "double",
-      "trailingComma": "es5"
+      "trailingCommas": "es5"
     }
   }
 }
