--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@biomejs/biome": "^1.5.3",
     "@types/node": "^20.11.19",
     "@vitest/ui": "^3.0.5",
+    "dotenv": "^16.4.7",
     "happy-dom": "^17.1.0",
     "terser": "^5.39.0",
     "tsup": "^8.0.2",
