--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sticklight/sdk",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "The Official Sticklight TypeScript SDK",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -14,7 +14,7 @@
     "format": "biome format .",
     "lint": "biome lint .",
     "preversion": "npm run lint && npm test",
-    "publish": "npm publish --access public",
+    "publish": "npm run compile && npm publish",
     "// ci:typecheck": "// For CI. 'npm run dev' already does typechecking (dts:true in tsup.config.ts)",
     "ci:typecheck": "tsc --noEmit"
   },
