--- a/biome.json
+++ b/biome.json
@@ -4,7 +4,7 @@
     "enabled": true
   },
   "files": {
-    "ignore": ["tests/vitest.config.ts", "tsup.config.ts"]
+    "ignore": ["tests/vitest.config.ts", "tsup.config.ts", ".vscode"]
   },
   "vcs": {
     "enabled": true,
