--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@sticklight/sdk",
-  "version": "0.1.7",
+  "version": "0.1.8",
   "description": "The Official Sticklight TypeScript SDK",
   "main": "dist/index.js",
   "module": "dist/index.mjs",
@@ -10,10 +10,9 @@
     "// compile": "// Also builds the dist package.",
     "compile": "npm run ci:typecheck && tsup --minify terser",
     "dev": "tsup --watch",
-    "test": "vitest watch --config tests/vitest.config.ts  // --typecheck (false by default)",
+    "test": "vitest watch --config tests/vitest.config.ts",
     "format": "biome format .",
     "lint": "biome lint .",
-    "preversion": "npm run lint && npm test",
     "publish": "npm run compile && npm publish",
     "// ci:typecheck": "// For CI. 'npm run dev' already does typechecking (dts:true in tsup.config.ts)",
     "ci:typecheck": "tsc --noEmit"
