refactor: improve SDK configuration and documentation
- Update Biome linting rules and configuration
- Modify package scripts to use pnpm and update linting commands
- Enhance README with user identification example and installation instructions
- Refactor authentication, capture, and initialization modules
- Add constants for default API base URL
- Improve error handling and logging in various modules

--- a/package.json
+++ b/package.json
@@ -5,16 +5,14 @@
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
     "// compile": "// Also builds the dist package.",
     "compile": "npm run ci:typecheck && tsup --minify terser",
     "dev": "tsup --watch",
     "test": "vitest watch --config tests/vitest.config.ts",
-    "format": "biome format .",
-    "lint": "biome lint .",
+    "lint": "biome check .",
+    "lint:fix": "biome check --write .",
     "publish": "npm run compile && npm publish",
     "// ci:typecheck": "// For CI. 'npm run dev' already does typechecking (dts:true in tsup.config.ts)",
     "ci:typecheck": "tsc --noEmit",
@@ -28,6 +26,9 @@
     "product",
     "analytics",
     "agent",
+    "observability",
+    "insights",
+    "data-driven",
     "data",
     "platform",
     "openai",
