--- a/biome.json
+++ b/biome.json
@@ -15,7 +15,8 @@
     "enabled": true,
     "rules": {
       "performance": {
-        "all": true
+        "all": true,
+        "noBarrelFile": "off"
       },
       "security": {
         "all": true
@@ -26,7 +27,9 @@
       },
       "recommended": true,
       "correctness": {
-        "noUnusedVariables": "error"
+        "noUnusedVariables": "error",
+        "all": true,
+        "useImportExtensions": "off"
       },
       "suspicious": {
         "noExplicitAny": "error"
