--- a/package.json
+++ b/package.json
@@ -8,13 +8,13 @@
   "files": ["dist"],
   "scripts": {
     "// compile": "// Also builds the dist package.",
-    "compile": "npm run ci:typecheck && tsup --minify terser",
+    "compile": "pnpm run ci:typecheck && tsup --minify terser",
     "dev": "tsup --watch",
     "test": "vitest watch --config tests/vitest.config.ts",
     "lint": "biome check .",
     "lint:fix": "biome check --write .",
-    "publish": "npm run compile && npm publish",
-    "// ci:typecheck": "// For CI. 'npm run dev' already does typechecking (dts:true in tsup.config.ts)",
+    "publish": "pnpm run compile && pnpm publish",
+    "// ci:typecheck": "// For CI. 'pnpm run dev' already does typechecking (dts:true in tsup.config.ts)",
     "ci:typecheck": "tsc --noEmit",
     "prepare": "husky"
   },
