--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
-  "files": ["dist"],
+  "files": [
+    "dist"
+  ],
   "scripts": {
     "// compile": "// Also builds the dist package.",
     "compile": "pnpm run lint && tsup --minify terser",
@@ -36,18 +38,18 @@
     "chatbot"
   ],
   "dependencies": {
-    "axios": "^1.6.7"
+    "axios": "^1.7.9"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.5.3",
-    "@types/node": "^20.11.19",
+    "@biomejs/biome": "^1.9.4",
+    "@types/node": "^22.13.4",
     "@vitest/ui": "^3.0.6",
     "dotenv": "^16.4.7",
-    "happy-dom": "^17.1.0",
+    "happy-dom": "^17.1.1",
     "husky": "^9.1.7",
     "terser": "^5.39.0",
-    "tsup": "^8.0.2",
-    "typescript": "^5.3.3",
+    "tsup": "^8.3.6",
+    "typescript": "^5.7.3",
     "vitest": "^3.0.6"
   },
   "author": "Sticklight",
