--- a/package.json
+++ b/package.json
@@ -5,9 +5,7 @@
   "main": "dist/index.js",
   "module": "dist/index.mjs",
   "types": "dist/index.d.ts",
-  "files": [
-    "dist"
-  ],
+  "files": ["dist"],
   "scripts": {
     "// compile": "// Also builds the dist package.",
     "compile": "pnpm run lint && tsup --minify terser",
@@ -45,6 +43,7 @@
     "@types/node": "^22.13.4",
     "@vitest/ui": "^3.0.6",
     "dotenv": "^16.4.7",
+    "esbuild": "^0.25.0",
     "happy-dom": "^17.1.1",
     "husky": "^9.1.7",
     "terser": "^5.39.0",
